# process

./: .appveyor.yml  .darcs-boring  .gitignore  .travis.yml  Makefile.nhc98  README.md  Setup.hs  aclocal.m4  appveyor.yml  changelog  changelog.md  configure.ac  process.cabal  stack-new-win32.yaml  stack.yaml
.github/workflows/: prepare-release-artifacts.yml  tests.yml
System/: Cmd.hs  Process.hs  Process.hsc
System/Process/: Binary.hs  ByteString.hsc  Common.hs  CommunicationHandle.hs  CommunicationHandle.hsc  Generic.hs  Internals.hs  JavaScript.hs  Posix.hs  Windows.hs  Windows.hsc
System/Process/CommunicationHandle/: Internal.hsc
System/Process/Environment/: OsString.hs
cbits/: pipes.c  runProcess.c
cbits/posix/: bsd_closefrom.c  bsd_closefrom.h  close_fds.c  common.h  find_executable.c  fork_exec.c  posix_spawn.c  runProcess.c
cbits/win32/: runProcess.c
include/: execvpe.h  pipes.h  processFlags.h  runProcess.h
jsbits/: process.js
test/: LICENSE  Setup.hs  main.hs  process-tests.cabal  stack.yaml  test-binary.hs
test/cli-child/: main.hs
tests/: 3231.hs  3994.hs  Makefile  T3994.hs  all.T  process-fork-wait.hs  process-fork-wait.stdout  process004.stdout-mingw32  process006.hs  process006.stderr  process006.stderr-i386-unknown-mingw32  process006.stdout  process006.stdout-i386-unknown-mingw32  process007.hs  process007_fd.c  process008.hs  process009.stdout  process010.hs  process010.stdout-mingw32  process011.hs  processT251.hs
tests/T9775/: Makefile  T9775_fail.hs  T9775_good.hs  all.T  main.c  ok.c
