name:         process
version:      1.1.0.1
license:      BSD3
license-file: LICENSE
maintainer:   libraries@haskell.org
bug-reports: http://hackage.haskell.org/trac/ghc/newticket?component=libraries/process
synopsis:     Process libraries
category:     System
description:
    This package contains libraries for dealing with system processes.
extra-source-files:
    aclocal.m4 configure.ac configure
    include/HsProcessConfig.h.in
extra-tmp-files:
    config.log config.status autom4te.cache
    include/HsProcessConfig.h
build-type:    Configure
cabal-version: >=1.6

source-repository head
    type:     git
    location: http://darcs.haskell.org/packages/process.git/

flag base4

Library {
  exposed-modules: System.Cmd
  if !impl(nhc98) {
    exposed-modules:
        System.Process
    if impl(ghc)
        exposed-modules:
          System.Process.Internals
    c-sources:
        cbits/runProcess.c
    include-dirs: include
    includes:
        runProcess.h
    install-includes:
        runProcess.h
        processFlags.h
        HsProcessConfig.h
    if os(windows)
        build-depends: Win32 >=2.2.0.0
        extra-libraries: kernel32
    else
        build-depends: unix
  }

  if (flag(base4)) {
     build-depends: base >= 4 && < 5
     cpp-options: -Dbase4
     -- later, we can use the new MIN_VERSION_base() stuff that
     -- arrived in Cabal-1.6.
  } else {
     build-depends: base >= 3 && < 4
     cpp-options: -Dbase3
  }

  build-depends: directory >= 1.0 && < 1.2,
                 filepath  >= 1.1 && < 1.4

  extensions: CPP
}
