name:          process
version:       1.2.0.0
-- GHC 7.6.1 released with 1.1.0.2
license:       BSD3
license-file:  LICENSE
maintainer:    libraries@haskell.org
bug-reports:   http://hackage.haskell.org/trac/ghc/newticket?component=libraries/process
synopsis:      Process libraries
category:      System
build-type:    Configure
cabal-version: >=1.10
description:
    This package contains libraries for dealing with system processes.

extra-source-files:
    aclocal.m4 configure.ac configure
    include/HsProcessConfig.h.in

extra-tmp-files:
    config.log config.status autom4te.cache
    include/HsProcessConfig.h

source-repository head
    type:     git
    location: http://git.haskell.org/packages/process.git

library
    default-language: Haskell2010
    other-extensions: CPP, ForeignFunctionInterface, InterruptibleFFI, RecordWildCards, Trustworthy

    exposed-modules: System.Cmd
    if !impl(nhc98)
        exposed-modules:
            System.Process
        if impl(ghc)
            exposed-modules:
                System.Process.Internals
        c-sources:
            cbits/runProcess.c
        include-dirs: include
        includes:
            runProcess.h
        install-includes:
            runProcess.h
            processFlags.h
            HsProcessConfig.h
        if os(windows)
            build-depends: Win32 >=2.2.0.0
            extra-libraries: kernel32
        else
            build-depends: unix

    build-depends: base      >= 4.5 && < 5,
                   directory >= 1.0 && < 1.3,
                   filepath  >= 1.1 && < 1.4,
                   deepseq   >= 1.1 && < 1.4

