name:          process
version:       1.2.0.0
-- GHC 7.6.1 released with 1.1.0.2
license:       BSD3
license-file:  LICENSE
maintainer:    libraries@haskell.org
bug-reports:   http://ghc.haskell.org/trac/ghc/newticket?component=libraries/process
synopsis:      Process libraries
category:      System
build-type:    Configure
cabal-version: >=1.10
description:
    This package contains libraries for dealing with system processes.

extra-source-files:
    aclocal.m4
    changelog
    configure
    configure.ac
    include/HsProcessConfig.h.in
    process.buildinfo

extra-tmp-files:
    autom4te.cache
    config.log
    config.status
    include/HsProcessConfig.h

source-repository head
    type:     git
    location: http://git.haskell.org/packages/process.git

source-repository this
    type:     git
    location: http://git.haskell.org/packages/process.git
    tag:      process-1.2.0.0-release

library
    default-language: Haskell2010
    other-extensions:
        BangPatterns
        CPP
        InterruptibleFFI
        RecordWildCards
        Trustworthy

    exposed-modules:
        System.Cmd
        System.Process
    if impl(ghc)
        exposed-modules:
            System.Process.Internals

    c-sources:
        cbits/runProcess.c
    include-dirs: include
    includes:
        runProcess.h
    install-includes:
        runProcess.h
        processFlags.h

    ghc-options: -Wall

    build-depends: base      >= 4.4 && < 4.8,
                   directory >= 1.1 && < 1.3,
                   filepath  >= 1.2 && < 1.4,
                   deepseq   >= 1.1 && < 1.4
    if os(windows)
        build-depends: Win32 >=2.2 && < 2.4
        extra-libraries: kernel32
    else
        build-depends: unix >= 2.5 && < 2.8
