cabal-version: 2.4
name:          process-tests
version:       1.6.18.0
license:       BSD-3-Clause
license-file:  LICENSE
maintainer:    libraries@haskell.org
bug-reports:   https://github.com/haskell/process/issues
synopsis:      Testing package for the process library
category:      System
build-type:    Simple
description:
    This package contains the testing infrastructure for the process library

source-repository head
  type:     git
  location: https://github.com/haskell/process.git
  subdir:   test

test-suite test
  default-language: Haskell2010
  hs-source-dirs: .
  main-is: main.hs
  type: exitcode-stdio-1.0
  build-depends: base >= 4 && < 5
               , bytestring
               , deepseq
               , directory
               , filepath
               , process == 1.6.18.0
  ghc-options: -threaded -rtsopts -with-rtsopts "-N"
